Me in username color.

--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -7025,6 +7025,9 @@
         }
       }
     },
+    "Me in username color" : {
+
+    },
     "Message" : {
       "localizations" : {
         "de" : {
